[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tart"
version = "1.4.1"
description = "Transient Array Radio Telescope Imaging and Operation Library"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">= 3.11"
authors = [
    { name = "Tim Molteno", email = "tim@elec.ac.nz" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Topic :: Communications :: Ham Radio",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "h5py",
    "numpy >= 2.0.0",
    "python-dateutil",
    "scipy; extra != 'minimal'"
]

[project.optional-dependencies]
minimal = []
plotting = ["matplotlib"]
all = ["jsonrpclib", "matplotlib", "pyfftw", "requests", "scipy"]

[project.urls]
Homepage = "http://github.com/tmolteno/tart_modules"

[tool.hatch.version]
path = "tart/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/tart",
]

[tool.hatch.envs.test]
dependencies = [
    "pytest",
]

[tool.hatch.envs.hatch-test]
extra-dependencies = [
  "pytest~=8.1",
  "scipy",
  "jsonrpclib",
  "requests",
  "ephem",
  "pyfftw",
  "matplotlib",
  "astropy",
  "healpy"
]
default-args = ["tart"]
