[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tart_tools"
version = "1.4.2"
description = "Transient Array Radio Telescope Command Line Tools"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">= 3.11"
authors = [{ name = "Tim Molteno", email = "tim@elec.ac.nz" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Topic :: Communications :: Ham Radio",
    "Topic :: Scientific/Engineering",
]
dependencies = ["minio", "numpy", "requests", "tart", "tqdm"]
packages = [{ include = "tart_tools" }]

[project.scripts]
tart_image = 'tart_tools.scripts.tart_image:main'
tart_test_api = 'tart_tools.scripts.tart_test_api:main'
tart_calibrate = 'tart_tools.scripts.tart_calibrate:main'
tart_calibration_data = 'tart_tools.scripts.tart_calibration_data:main'
tart_vis2json = 'tart_tools.scripts.tart_vis2json:main'
tart_download_gains = 'tart_tools.scripts.tart_download_gains:main'
tart_upload_gains = 'tart_tools.scripts.tart_upload_gains:main'
tart_download_data = 'tart_tools.scripts.tart_download_data:main'
tart_get_archive_data = 'tart_tools.scripts.tart_get_archive_data:main'
tart_set_mode = 'tart_tools.scripts.tart_set_mode:main'
tart_download_antenna_positions = 'tart_tools.scripts.tart_download_antenna_positions:main'
tart_upload_antenna_positions = 'tart_tools.scripts.tart_upload_antenna_positions:main'

[project.urls]
Homepage = "http://github.com/tmolteno/tart_modules"

[tool.hatch.version]
path = "tart_tools/__init__.py"

[tool.hatch.build.targets.sdist]
include = ["/tart_tools"]

[tool.hatch.envs.hatch-test]
extra-dependencies = [
    "pytest~=8.1",
    "scipy",
    "jsonrpclib",
    "requests",
    "ephem",
    "pyfftw",
    "matplotlib",
    "astropy",
    "healpy",
]
default-args = ["tart_tools"]
